08-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-configmap
spec:
  selector:
    matchLabels:
      app: app-configmap
  replicas: 3
  template:
    metadata:
      labels:
        app: app-configmap
    spec:
      containers:
      - name: app-configmap
        image: nginx:1.7.9
        ports:
          - name: http
            containerPort: 80
