09-secret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-secret
spec:
  selector:
    matchLabels:
      app: app-secret
  replicas: 3
  template:
    metadata:
      labels:
        app: app-secret
    spec:
      containers:
      - name: app-secret
        image: nginx:1.7.9
        ports:
          - name: http
            containerPort: 80
