08-deployment-multiple.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: http        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 3
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: scottsbaldwin/docker-hello-world:latest
        ports:
          - name: http
            containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: scottsbaldwin/docker-hello-world:latest
        ports:
          - name: http
            containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: scottsbaldwin/docker-hello-world:latest
        ports:
          - name: http
            containerPort: 80
